// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link can be displayed with the default styles 1`] = `
Object {
  "link": .c0:focus {
  outline: auto 5px -webkit-focus-ring-color;
}

.c0:link,
.c0:visited {
  color: #2a2c2e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    className="c0"
    href={null}
    to={null}
  >
    Some content
  </a>,
}
`;

exports[`Link can be inverted 1`] = `
Object {
  "link": .c0:focus {
  outline: auto 5px -webkit-focus-ring-color;
}

.c0:link,
.c0:visited {
  color: #2a2c2e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:link,
.c0:visited {
  color: #fff;
}

<a
    className="c0"
    href={null}
    to={null}
  >
    Some content
  </a>,
}
`;

exports[`Link renders 1`] = `
<Link__StyledLink
  as="a"
  context={
    Object {
      "inheritColor": undefined,
    }
  }
  href={null}
  invert={false}
  to={null}
>
  Go home
</Link__StyledLink>
`;
